--- a/PracticeProject/app/src/main/AndroidManifest.xml
+++ b/PracticeProject/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zero.practiceproject">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".parent.ParentActivity"></activity>
         <activity
             android:name=".activity.FirstActivity"
             android:launchMode="singleTask"
@@ -32,6 +33,11 @@
             android:name=".service.MyService"
             android:enabled="true"
             android:exported="true" />
+
+        <service android:name=".service.HelloIntentService"
+            android:enabled="true"/>
+        <service android:name=".service.TestJobIntentService"
+            android:enabled="true"/>
     </application>
 
 </manifest>
