--- a/BluetoothPratice/app/src/main/AndroidManifest.xml
+++ b/BluetoothPratice/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.bluetoothpratice">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".common.SimpleActivityBase"></activity>
+        <activity android:name=".bluetoothChat.DeviceListActivity"></activity>
+        <activity android:name=".common.SimpleActivityBase" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
