--- a/JetpackPratice/app/build.gradle
+++ b/JetpackPratice/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     implementation 'androidx.fragment:fragment:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
+    implementation 'androidx.startup:startup-runtime:1.0.0-beta01'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
