--- a/KotlinPratice/KotlinAndroid/base/build.gradle
+++ b/KotlinPratice/KotlinAndroid/base/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.2.0'
     api 'com.google.code.gson:gson:2.8.6'
     api 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
+    api 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
 }
