--- a/KotlinPratice/KotlinAndroid/base/build.gradle
+++ b/KotlinPratice/KotlinAndroid/base/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     api 'com.google.code.gson:gson:2.8.6'
     api 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
     api 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
+    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
 }
