--- a/CustomView/CustomViewSet/app/src/main/AndroidManifest.xml
+++ b/CustomView/CustomViewSet/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CustomViewSet">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LayoutSizeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".AnimatorActivity">
+        <activity android:name=".MainActivity">
         </activity>
+        <activity android:name=".AnimatorActivity"></activity>
     </application>
 
 </manifest>
