--- a/CustomView/CustomViewSet/app/src/main/AndroidManifest.xml
+++ b/CustomView/CustomViewSet/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CustomViewSet">
-        <activity android:name=".LayoutLayout"></activity>
-        <activity android:name=".LayoutSizeActivity">
+        <activity android:name=".LayoutLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".LayoutSizeActivity">
         </activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".AnimatorActivity" />
