--- a/CustomView/CustomViewSet/app/src/main/AndroidManifest.xml
+++ b/CustomView/CustomViewSet/app/src/main/AndroidManifest.xml
@@ -15,14 +15,16 @@
 
         <activity android:name=".LayoutSizeActivity"></activity>
 
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity" ></activity>
+
+        <activity android:name=".AnimatorActivity" />
+
+        <activity android:name=".ScaleImageViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".AnimatorActivity" />
     </application>
 
 </manifest>
