--- a/HencoderSourceCode/app/build.gradle
+++ b/HencoderSourceCode/app/build.gradle
@@ -2,6 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+class PluginDemo implements Plugin<Project> {
+    @Override
+    void apply(Project target) {
+        println "Hello author"
+    }
+}
+
+apply plugin: PluginDemo
+
 android {
     signingConfigs {
         zerolans {
