--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-messaging'
+    compileOnly 'com.android.tools.build:gradle:4.0.1'
 
     //Google 服务
     implementation 'com.google.android.gms:play-services-base:16.1.0'
