--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -17,6 +17,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -32,7 +37,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-messaging'
-    compileOnly 'com.android.tools.build:gradle:3.4.2'
+//    compileOnly 'com.android.tools.build:gradle:3.4.2'
 
     //Google 服务
     implementation 'com.google.android.gms:play-services-base:16.1.0'
@@ -44,8 +49,8 @@ dependencies {
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 
 
-    testImplementation 'junit:junit:4.12'
+    /*testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'*/
 
 }
