--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -3,11 +3,11 @@
     package="com.example.swordlibrary">
 
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
-    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -20,7 +20,9 @@
         <activity android:name=".java.memory.MemoryListenerActivity">
         </activity>
         <activity android:name=".java.firebase.FireBaseActivity"></activity>
-        <activity android:name=".java.MainActivity2">
+        <activity
+            android:screenOrientation="landscape"
+            android:name=".java.MainActivity2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
