--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -23,13 +23,15 @@
         <activity
             android:screenOrientation="landscape"
             android:name=".java.MainActivity2">
+
+        </activity>
+        <activity android:name=".kotlin.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kotlin.MainActivity" />
 
         <service
             android:name=".java.firebase.MyFirebaseMessagingService"
