EditText + ListPopupWindow 实现编辑框下拉，代码简化，封装

--- a/HencoderSourceCode/settings.gradle
+++ b/HencoderSourceCode/settings.gradle
@@ -1,9 +1,10 @@
-include ':threadinteraction'
+/*include ':threadinteraction'
 include ':ThreadRxjava'
 include ':threadandroid'
 include ':gradlesourcecode'
 include ':threadsync'
 include ':gradleplugin'
-include ':mylibrary1'
+include ':mylibrary1'*/
+include ':constraintlayout'
 include ':app'
 rootProject.name = "HencoderSourceCode"
