--- a/HencoderSourceCode/constraintlayout/build.gradle
+++ b/HencoderSourceCode/constraintlayout/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.library'
+    id 'com.android.application'
     id 'kotlin-android'
 }
 
@@ -8,6 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+        applicationId "com.sword.constraintlayout"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
