--- a/HencoderSourceCode/constraintlayout/build.gradle
+++ b/HencoderSourceCode/constraintlayout/build.gradle
@@ -16,12 +16,27 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+    }
+
+    signingConfigs {
+        zerolans {
+            storeFile file('/Users/zhouyanxia/GitCode/zerolans.jks')
+            storePassword 'zerolans'
+            keyAlias 'zero'
+            keyPassword 'zerolans'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.zerolans
+        }
+
+        debug {
+            signingConfig signingConfigs.zerolans
         }
     }
     compileOptions {
