--- a/SwordDemoLibrary/script/build.gradle
+++ b/SwordDemoLibrary/script/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation group: 'org.dom4j', name: 'dom4j', version: '2.1.3'
+    implementation group: 'net.dongliu', name: 'apk-parser', version: '2.6.10'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
