--- a/SwordDemoLibrary/test/build.gradle
+++ b/SwordDemoLibrary/test/build.gradle
@@ -18,10 +18,15 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
-    testOptions {
+    /*testOptions {
         unitTests {
             includeAndroidResources=true
         }
+    }*/
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -29,9 +34,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
@@ -41,8 +43,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
 
-    androidTestImplementation "org.mockito:mockito-core:1.10.19"
-    androidTestImplementation 'org.mockito:mockito-android:+'
+    androidTestImplementation "org.mockito:mockito-core:3.11.2"
+    androidTestImplementation 'org.mockito:mockito-android:3.11.2'
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
+
+    //Junit 4 framework 这是必须添加的依赖ﬁ
+    testImplementation 'junit:junit:4.12'
+    //Robolectric environment 如果测试用例对 Android 框架具有依赖性，则需要添加依赖
+    //testImplementation 'androidX.test:core:1.0.0'
+    //Mockito framework 如果测试用例对 Android Framework 的依赖很小，则添加此依赖来模拟 Android Framework 对象
+    //testImplementation 'org.mockito:mockito-core:1.10.19'
 }
