--- a/SwordDemoLibrary/build.gradle
+++ b/SwordDemoLibrary/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     ext.kotlin_version = "1.4.31"
     repositories {
@@ -24,4 +25,15 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+
+ext {
+    androidx_ktx_version = "1.6.0"
+    androidx_appcompat_version = "1.3.0"
+    androidx_mertial_version = "1.3.0"
+    mockitoVersion = "3.11.2"
+    junitVersion = "4.13.2"
+    androidXVersion = "1.4.0"
+    googleTruthVersion = "1.1.3"
 }
