--- a/SwordDemoLibrary/test/build.gradle
+++ b/SwordDemoLibrary/test/build.gradle
@@ -18,11 +18,11 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
-    /*testOptions {
+    testOptions {
         unitTests {
             includeAndroidResources=true
         }
-    }*/
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -39,18 +39,22 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.core:core-ktx:${androidx_ktx_version}"
+    implementation "androidx.appcompat:appcompat:${androidx_appcompat_version}"
+    implementation "com.google.android.material:material:${androidx_mertial_version}"
 
-    androidTestImplementation "org.mockito:mockito-core:3.11.2"
-    androidTestImplementation 'org.mockito:mockito-android:3.11.2'
-    androidTestImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:core:1.3.0'
-    androidTestImplementation 'com.google.truth:truth:1.1.3'
+    androidTestImplementation "junit:junit:${junitVersion}"
 
-    //Junit 4 framework 这是必须添加的依赖ﬁ
-    testImplementation 'junit:junit:4.12'
+    //Junit 4 framework 这是必须添加的依赖
+    testImplementation "junit:junit:${junitVersion}"
+    //mockito, for mocking Android Code
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+    testImplementation "org.mockito:mockito-android:${mockitoVersion}"
+    //assert library
+    testImplementation "com.google.truth:truth:${googleTruthVersion}"
+    //
+    testImplementation "androidx.test:core:${androidXVersion}"
+
     //Robolectric environment 如果测试用例对 Android 框架具有依赖性，则需要添加依赖
     //testImplementation 'androidX.test:core:1.0.0'
     //Mockito framework 如果测试用例对 Android Framework 的依赖很小，则添加此依赖来模拟 Android Framework 对象
