--- a/SwordDemoLibrary/camerax/build.gradle
+++ b/SwordDemoLibrary/camerax/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -32,7 +33,9 @@ android {
 }
 
 dependencies {
-
+    //custom until library
+    implementation project(":utilclass")
+    
     //for Kotlin lang
     implementation 'androidx.core:core-ktx:1.3.2'
 
@@ -41,17 +44,17 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     def camerax_version = "1.0.1"
-    //for CameraX: camera core library. camerax using camera2 implementation
-    implementation "androidx.camera:camera-core:${camerax_version}"
-    implementation "androidx.camera:camera-view"
+    //for CameraX: camerax using camera2 implementation
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    //CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    //CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-SNAPSHOT"
 
     //for Unit Test
     testImplementation 'junit:junit:4.+'
-
+    
     //for Instrumented test
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-
-
 }
