--- a/SwordDemoLibrary/zxingscanner/build.gradle
+++ b/SwordDemoLibrary/zxingscanner/build.gradle
@@ -33,11 +33,24 @@ android {
 
 dependencies {
 
+    //Kotlin language
     implementation 'androidx.core:core-ktx:1.6.0'
+    
+    //for Appcompat and UI thing
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    
+    //zxing library
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation 'com.google.zxing:android-core:3.3.0'
+    
+    //reference Util module for print log
+    implementation project(":utilclass")
+    
+    //for Unit test
     testImplementation 'junit:junit:4.+'
+    
+    //for Instrumented test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
