--- a/SwordDemoLibrary/camera/build.gradle
+++ b/SwordDemoLibrary/camera/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
 }
 
 android {
@@ -28,11 +29,20 @@ android {
 }
 
 dependencies {
+    
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.30'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    implementation project(":utilclass")
+    implementation 'com.google.android.material:material:1.4.0'
+
+
     testImplementation 'junit:junit:4.+'
+    
+    
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
