--- a/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.camera">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera.any" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +14,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwordDemoLibrary">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".CameraActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
