--- a/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature android:name="android.hardware.camera.any" />
+    <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
 
     <application
         android:allowBackup="true"
