--- a/SwordDemoLibrary/zxingscanner/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/zxingscanner/src/main/AndroidManifest.xml
@@ -4,10 +4,7 @@
     
     <uses-permission android:name="android.permission.CAMERA"/>
     
-    <uses-feature android:name="android.hardware.camera.any" android:required="true"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.flash" android:required="false"/>
-    <uses-feature android:name="android.hardware.screen.landscape" android:required="true"/>
+    <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
 
     <application
         android:allowBackup="true"
