--- a/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
@@ -28,4 +28,10 @@
         </activity>
     </application>
 
+    <queries>
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE"/>
+        </intent>
+    </queries>
+
 </manifest>
