--- a/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
@@ -16,15 +16,20 @@
         <activity
             android:name=".CameraActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
+        </activity>
+        
+        <activity 
+            android:name=".TakePhotoActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
