--- a/SwordDemoLibrary/learnkotlin/build.gradle
+++ b/SwordDemoLibrary/learnkotlin/build.gradle
@@ -39,13 +39,16 @@ dependencies {
     //Appcompat & UI 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
     //Unit test
     testImplementation 'junit:junit:4.+'
     
     //Instrumented test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    
 }
 repositories {
     mavenCentral()
