--- a/SwordDemoLibrary/learnkotlin/build.gradle
+++ b/SwordDemoLibrary/learnkotlin/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     //extended version of the Kotlin standard library, which contains additional extension function for Java API
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //
+    implementation "com.google.code.gson:gson:2.8.6"
     
     
     //Appcompat & UI 
@@ -48,7 +51,8 @@ dependencies {
     //Instrumented test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+
 }
 repositories {
     mavenCentral()
