--- a/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/camera/src/main/AndroidManifest.xml
@@ -3,8 +3,11 @@
     package="com.example.camera">
 
     <uses-permission android:name="android.permission.CAMERA" />
-
-
+    
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18"/>-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    
     <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
 
     <application
@@ -32,6 +35,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.camera.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+            
+        </provider>
+        
     </application>
 
     <queries>
