--- a/SwordDemoLibrary/learnkotlin/build.gradle
+++ b/SwordDemoLibrary/learnkotlin/build.gradle
@@ -31,7 +31,7 @@ android {
 dependencies {
 
     //kotlin core module
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.6.0"
     //extended version of the Kotlin standard library, which contains additional extension function for Java API
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
@@ -46,7 +46,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     //Unit test
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     
     //Instrumented test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
