--- a/SwordDemoLibrary/CustomViewGroup/build.gradle
+++ b/SwordDemoLibrary/CustomViewGroup/build.gradle
@@ -33,10 +33,20 @@ android {
 
 dependencies {
 
+    //kotlin
     implementation 'androidx.core:core-ktx:1.3.2'
+
+    //Util module
+    implementation project(":utilclass")
+
+    //UI
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+
+    //Unit Test
     testImplementation 'junit:junit:4.+'
+
+    //Instrument Test
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
