--- a/SwordDemoLibrary/learnkotlin/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/learnkotlin/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.learnkotlin">
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SwordDemoLibrary">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".main.MainActivity"
             android:exported="true">
@@ -18,6 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".lesson.LessonActivity" android:theme="@style/LessonTheme"/>
     </application>
 
 </manifest>
