--- a/SwordDemoLibrary/utilapk/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/utilapk/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.utilclass">
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    package="com.sword.utilapk">
 
     <application
         android:allowBackup="true"
@@ -10,7 +8,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.SwordDemoLibrary">
         <activity
             android:name=".MainActivity"
