--- a/SwordDemoLibrary/gradlescript/build.gradle
+++ b/SwordDemoLibrary/gradlescript/build.gradle
@@ -34,6 +34,8 @@ android {
 
 dependencies {
 
+    compileOnly 'com.android.tools.build:gradle:4.1.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -42,3 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+//apply from: "gradlescript.gradle"
