扔物线 - 自定义 View

--- a/SwordDemoLibrary/settings.gradle
+++ b/SwordDemoLibrary/settings.gradle
@@ -15,7 +15,7 @@ include ':utilclass'
 include ':zxingscanner'
 include ':learnkotlin'
 include ':camera'
-include ':CustomViewGroup'
+include ':CustomView'
 include ':UserInterface'
 include ':appnavigation'
 include ':camera2'
