--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -23,14 +23,15 @@
         <activity
             android:screenOrientation="landscape"
             android:name=".java.MainActivity2">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kotlin.MainActivity" >
-
+        <activity android:name=".kotlin.MainActivity"
+            android:exported="true">
         </activity>
 
         <service
