--- a/SwordDemoLibrary/settings.gradle
+++ b/SwordDemoLibrary/settings.gradle
@@ -1,33 +1,33 @@
-include ':connectivity'
-include ':script'
-include ':gradlescript'
+//include ':connectivity'
+//include ':script'
+//include ':gradlescript'
 include ':loginlibrary'
 //include ':script'
 //include ':gradlescript'
 //include ':loginlibrary'
-include ':test'
+//include ':test'
 //include ':groovypractice'
 include ':app'
 rootProject.name = "SwordDemoLibrary"
-include ':scanner'
-include ':camerax'
+//include ':scanner'
+//include ':camerax'
 include ':utilclass'
-include ':zxingscanner'
-include ':learnkotlin'
-include ':camera'
+//include ':zxingscanner'
+//include ':learnkotlin'
+//include ':camera'
 include ':CustomView'
-include ':UserInterface'
-include ':appnavigation'
-include ':camera2'
-include ':utilapk'
-include ':permission'
-include ':httptheory'
-include ':XlcwSDK'
-include ':floatball'
-include ':androidapi'
-include ':animations_transitions'
-include ':webbasecontent'
-include ':pluginable'
-include ':plugin'
-include ':androidarticle'
-include ':jetpackcompose'
+//include ':UserInterface'
+//include ':appnavigation'
+//include ':camera2'
+//include ':utilapk'
+//include ':permission'
+//include ':httptheory'
+//include ':floatball'
+//include ':androidapi'
+//include ':animations_transitions'
+//include ':webbasecontent'
+//include ':pluginable'
+//include ':plugin'
+//include ':androidarticle'
+//include ':jetpackcompose'
+//include ':telegramsource'
