--- a/SwordDemoLibrary/CustomView/build.gradle
+++ b/SwordDemoLibrary/CustomView/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -22,12 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    //compileOptions {
+    //    sourceCompatibility JavaVersion.VERSION_11
+    //    targetCompatibility JavaVersion.VERSION_11
+    //}
 }
 
 dependencies {
