--- a/SwordDemoLibrary/settings.gradle
+++ b/SwordDemoLibrary/settings.gradle
@@ -30,4 +30,4 @@ include ':CustomView'
 //include ':plugin'
 //include ':androidarticle'
 //include ':jetpackcompose'
-//include ':telegramsource'
+include ':telegramsource'
