处理运行时的报错

--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.swordlibrary">
 
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
@@ -7,7 +8,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -16,13 +18,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".java.memory.MemoryListenerActivity">
-        </activity>
-        <activity android:name=".java.firebase.FireBaseActivity"></activity>
+        android:usesCleartextTraffic="true"
+        tools:ignore="AllowBackup,UnusedAttribute">
+        
         <activity
             android:screenOrientation="landscape"
-            android:name=".java.MainActivity2">
+            android:name=".java.MainActivity2"
+            tools:ignore="IntentFilterExportedReceiver">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,10 +32,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kotlin.MainActivity"
-            android:exported="true">
-        </activity>
 
+        <activity android:name=".java.memory.MemoryListenerActivity"/>
+        <activity android:name=".java.firebase.FireBaseActivity" />
         <service
             android:name=".java.firebase.MyFirebaseMessagingService"
             android:exported="false">
@@ -41,7 +42,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_stat_ic_notification" />
