Android Gradle 依赖倒入 ，用于查看 Android Gradle 源码；其他代码相关同步

--- a/SwordDemoLibrary/settings.gradle
+++ b/SwordDemoLibrary/settings.gradle
@@ -6,7 +6,7 @@ include ':connectivity'
 //include ':gradlescript'
 //include ':loginlibrary'
 //include ':test'
-//include ':groovypractice'
+include ':groovypractice'
 include ':app'
 rootProject.name = "SwordDemoLibrary"
 //include ':scanner'
