--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:screenOrientation="landscape"
             android:name=".java.MainActivity2"
-            tools:ignore="IntentFilterExportedReceiver">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
